--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             </select>
           </div>
           <div class="col-2">
-              <button type="button" class="analyze">Add</button>
+              <button type="button" class="analyze">Filter</button>
           </div>
       </div>
       <div class="row">
